--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
@@ -20,13 +23,14 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.44.1",
+    "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-simple-captcha": "^9.0.2",
     "react-tabs": "^6.0.1",
+    "recharts": "^2.6.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.6",
     "swiper": "^9.3.2"
